golang/cmd/dummy/dummy-all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dummy
  labels:
    name: dummy
---
apiVersion: v1
kind: Service
metadata:
  name: dummy
  namespace: dummy
spec:
  selector:
    app: dummy
  ports:
  - port: 8000
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dummy
  name: dummy
  namespace: dummy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy
  template:
    metadata:
      labels:
        app: dummy
      annotations:
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: dummy
      containers:
      - name: dummy
        image: veganafro/dummy_image:dev
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: 128Mi
            cpu: "1"
