golang/cmd/dummy/dummy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy
  namespace: dummy
spec:
  type: NodePort
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: dummy
